--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,7 +4,7 @@
 		"BASE_URL": "https://collegey.com",
 		"MAILER_IMAGE_PATH": "https://collegey.com/assets/images/logo_image",
 		"MAILER_IMAGE_PATH1": "https://collegey.s3-ap-southeast-1.amazonaws.com/mailers",
-		"DASHBOARD_URL": "/student/dashboard",
+		"DASHBOARD_URL": "https://collegey.com/",
 		"RESET_PASSWORD_URL": "/reset-password",
 		"FB_LINK": "https://www.facebook.com/BeCollegey",
 		"INSTA_LINK": "https://www.instagram.com/becollegey/",
@@ -17,7 +17,7 @@
 		"ID": "production",
 		"BASE_URL": "https://collegey.com/",
 		"MAILER_IMAGE_PATH": "https://collegey.com/assets/images/logo_image",
-		"DASHBOARD_URL": "/student/dashboard",
+		"DASHBOARD_URL": "https://collegey.com/",
 		"RESET_PASSWORD_URL": "/reset-password",
 		"FB_LINK": "https://www.facebook.com/BeCollegey",
 		"INSTA_LINK": "https://www.instagram.com/becollegey/",
